2003-05-29  Gregory John Casamento <greg_casamento@yahoo.com>
	
	* Resources/GormScrollViewAttributesInspector.gorm: new
	* GormScrollViewAttributesInspector.h: new
	* GormScrollViewAttributesInspector.m: new
	* Palettes/0Menu/GNUmakefile.preamble: new
	* Palettes/1Windows/GNUmakefile.preamble: new
	* Palettes/2Controls/GNUmakefile.preamble: new
	* Palettes/3Containers/GNUmakefile.preamble: new
	* Palettes/4Data/GNUmakefile.preamble: new
	* Gorm.m: Removed some constants and moved them to GormLib.
	* GormDocument.m: Removed some constants and moved them to
	GormLib.
	* Palettes/(all files): Cleaned up includes.  
	Got rid of "../.." style of includes by using GNUmakefile 
	settings.  Also corrected the category that some of the 
	classes are implementing to provide inspector names to Gorm.

2003-05-24  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Prevent subclassing of FirstResponder.

2003-05-24  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInspectorsManager.m: Made changes to revert inspector to
	"empty" when a document is closed.
	* GormClassManager.m: Prevent user from adding methods to 
	FirstResponder.  FirstResponder now automatically adds all 
	action methods to it's action.
	* GormDocument.m: Corrected a problem which was allowing the user to 
	instantiate FirstResponder.
	* Gorm.m: Cleaned up some places where I was using (Gorm *) and should
	have been using (id<IB>).
	
2003-05-25  Fabien Vallon  <fabien@tuxfamily>

	* Gorm.m : fix typo

2003-05-24  Fabien Vallon  <fabien@tuxfamily.org>

	* Gorm.m : Add Localization
	* GormDocument.m : Ditto
	* GormFilesOwner.m : Ditto
	* GormInspectorsManager.m : Ditto
	* GormObjectInspector.m : Ditto
	* GormPalettesManager.m : Ditto

2003-05-24  Fabien Vallon  <fabien@tuxfamily.org>

	* Gorm.m : refactored newApplication, newEmpty, newPalettes,
	newInspector. new method : newGormDocument
	Add inteligent window placement (cascade)